[fix] Prevent signatures from being too big
in print preview mode

--- a/edx_credentials_themes/static/edx.org/certificates/sass/_print-rendering.scss
+++ b/edx_credentials_themes/static/edx.org/certificates/sass/_print-rendering.scss
@@ -186,7 +186,7 @@
 
   .signatory {
     .signatory-signature {
-      max-width: 50%;
+      max-width: 50% !important;
       height: 40px;
     }
 
